# WebRtc_splitting_filter

./: .gitignore  ProjectY.sln  Readme.md
CMake_Project/splitting_filter/: CMakeLists.txt
CMake_Project/splitting_filter/splitting_filter/: CMakeLists.txt  main.cpp  splitting_filter.c  wavfile.h
ProjectY/: ProjectY.cpp  ProjectY.vcxproj  ProjectY.vcxproj.filters  cpp_threeband_filter.h  mThreeBandFilter.h  main.cpp  my_sparse_fir_fliter.h  splitting_filter.h  unittest_helper.h  wavfile.h
ProjectY/mySplittingFilter/: Readme.md  my_sparse_fir_filter.c  my_splitting_filter_c.c  my_splitting_filter_c.h  my_three_band_filter.c  my_three_band_filter.h  two_band_QMF_filter.c  two_band_QMF_filter.h
